--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,26 @@
-version: "3.1"
+version: "3.3"
 
 services:
   web:
     build: ./web
     ports:
       - 7000:80
+    configs:
+      - source: web-flask
+        target: /app/instance/ponthe.cfg
+    volumes:
+     - web-uploads:/app/instance/uploads
     depends_on:
       - db
     restart: always
 
   db:
     image: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password # à tester sans
+    # command: mysqld --default-authentication-plugin=mysql_native_password # à tester sans
     ports:
       - 7501:3306
-    #volumes:
-    #  - db-data:/var/lib/mysql
+    volumes:
+     - db-data:/var/lib/mysql
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=${DATABASE_NAME}
@@ -33,6 +38,12 @@ services:
       - MYSQL_ROOT_PASSWORD=bogus
     restart: always
 
-#volumes:
-#  db-data:
-#    driver: local
+volumes:
+  db-data:
+    driver: local
+  web-uploads:
+    driver: local
+
+configs:
+  web-flask:
+    file: ./web/ponthe.prod.cfg
