--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ web/venv/
 # web/instance/club_folder/
 
 # Pypi package installation
-web/Galeries_Ponthe.egg-info/
+web/app/Galeries_Ponthe.egg-info/
