add entity setters, password hashing, rewrite fixtures without lib

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@
 # Virtual environment
 web/venv/
 
+# Credentials : Mysql / Email
+web/ponthe.prod.cfg
+
 # Instance Folder - used for configuration parameters and uploads / fixtures files
-# web/instance/club_folder/
+# web/app/instance/club_folder/
+web/app/instance/ponthe.cfg
 
 # Pypi package installation
 web/app/Galeries_Ponthe.egg-info/
