finish account creation and password resetting, create admin and event description, create resumable uploading mechanism forking Flask-Tus, rename routes

--- a/web/app/requirements.txt
+++ b/web/app/requirements.txt
@@ -9,3 +9,4 @@ Flask-Migrate
 # nose2 # test runner
 Flask-Script
 translitcodec # to slugify foreign letters like ü in ue
+git+git://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
