--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ web/ponthe.prod.cfg
 # Instance Folder - used for configuration parameters and uploads / fixtures files
 # web/app/instance/club_folder/
 web/app/instance/ponthe.cfg
+web/app/instance/club_folder
+web/app/instance/upload_tmp
 
 # Pypi package installation
 web/app/Galeries_Ponthe.egg-info/
