create admin blueprint with batch upload, add waiting zone features and real uploads images, mess up with docker build args, make event category optional, add redis to docker with Flask-Tus-Ponthe install form github, create file_helper

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ web/venv/
 
 # Credentials : Mysql / Email
 web/ponthe.prod.cfg
+.env
 
 # Instance Folder - used for configuration parameters and uploads / fixtures files
 # web/app/instance/club_folder/
