fix Docker issues, create dashboard, add Dashboard with admin zone to Uppy

--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -1,5 +1,8 @@
-FROM       ubuntu:16.04
+FROM ubuntu:16.04
 MAINTAINER Philippe Ferreira De Sousa
+
+ARG SSH_USERNAME
+ARG SSH_PASSWORD
 
 RUN apt-get update && apt-get install -y openssh-server
 RUN mkdir /var/run/sshd
