--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     restart: always
 
   sshd:
+    env_file: .env
     build:
       context: ./sshd
       args:
@@ -28,6 +29,7 @@ services:
     restart: always
 
   db:
+    env_file: .env
     image: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
     ports:
