--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,7 @@
 # Template file, rename it .env for it to take effects
 DATABASE_NAME=my-db
 DATABASE_USER=me
+DATABASE_PASSWORD=*****************
+DATABASE_ROOT_PASSWORD=****************************************
 SSH_USERNAME=yolo
 SSH_PASSWORD=****************
-DATABASE_PASSWORD=*****************
