--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "127.0.0.1:7000:80"
     volumes:
-     - club-folder:/app/instance/club_folder
+      - club-folder:/app/instance/club_folder
+      - ./web/db_backup:/db_backup
     depends_on:
       - db
       - sshd
@@ -22,7 +23,22 @@ services:
     ports:
       - "7502:22"
     volumes:
-     - club-folder:/home/ponthe
+      - club-folder:/home/ponthe
+    restart: always
+
+  backup:
+    env_file: .env
+    image: candyline/mysql-backup-cron
+    volumes:
+      - ./db-backup:/backup
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
+      - MYSQL_HOST=db
+      - DBS=${DATABASE_NAME}
+      - BACKUP_DIR=/backup
+      - CRON_D_BACKUP="0 1 * * * root /backup.sh | logger"
+    depends_on:
+      - db
     restart: always
 
   db:
@@ -30,7 +46,7 @@ services:
     image: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
     volumes:
-     - db-data:/var/lib/mysql
+      - db-data:/var/lib/mysql
     environment:
       - DATA_PATH_HOST=/var/lib/mysql
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
