create API auth endpoint

--- a/web/app/instance/ponthe.dist.cfg
+++ b/web/app/instance/ponthe.dist.cfg
@@ -10,3 +10,6 @@ MAIL_PORT = 587
 MAIL_USERNAME = 'SMTP_Injection'
 MAIL_PASSWORD = '******************************************'
 MAIL_USE_TLS = True
+
+JWT_ALGORITHM = 'RS256'
+JWT_ACCESS_TOKEN_EXPIRES = False
