--- a/web/app/requirements.txt
+++ b/web/app/requirements.txt
@@ -10,3 +10,5 @@ Flask-Migrate
 Flask-Script
 translitcodec # to slugify foreign letters like ü in ue
 slack-logger
+Flask-JWT-extended[asymmetric_crypto]
+git+git://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
