--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-camera": "^1.0.1",
