--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.0",
+    "react": "^16.4.0",
+    "react-native": "0.55.4",
     "react-native-camera": "^1.0.1",
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.7",
     "react-native-vector-icons": "^4.6.0",
     "react-native-video": "^2.0.0",
-    "react-navigation": "^1.4.0"
+    "react-navigation": "^2.13.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
