wip upgrade react-native

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.4.0",
-    "react-native": "0.55.4",
+    "react": "^16.4.1",
+    "react-native": "0.56.1",
     "react-native-camera": "^1.0.1",
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
@@ -22,7 +22,8 @@
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "babel-core": "^7.0.0-beta.47"
   },
   "jest": {
     "preset": "react-native"
