--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ web/ponthe.prod.cfg
 web/app/instance/ponthe.cfg
 web/app/instance/club_folder
 web/app/instance/upload_tmp
+web/app/instance/logs
 
 # Pypi package installation
 web/app/Galeries_Ponthe.egg-info/
