--- a/mobile/ios/Galeries.xcodeproj/xcshareddata/xcschemes/Galeries-tvOS.xcscheme
+++ b/mobile/ios/Galeries.xcodeproj/xcshareddata/xcschemes/Galeries-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0820"
+   LastUpgradeVersion = "0940"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "GaleriesPonthe-tvOS.app"
-               BlueprintName = "GaleriesPonthe-tvOS"
-               ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+               BuildableName = "Galeries-tvOS.app"
+               BlueprintName = "Galeries-tvOS"
+               ReferencedContainer = "container:Galeries.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "GaleriesPonthe-tvOSTests.xctest"
-               BlueprintName = "GaleriesPonthe-tvOSTests"
-               ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+               BuildableName = "Galeries-tvOSTests.xctest"
+               BlueprintName = "Galeries-tvOSTests"
+               ReferencedContainer = "container:Galeries.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "GaleriesPonthe-tvOSTests.xctest"
-               BlueprintName = "GaleriesPonthe-tvOSTests"
-               ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+               BuildableName = "Galeries-tvOSTests.xctest"
+               BlueprintName = "Galeries-tvOSTests"
+               ReferencedContainer = "container:Galeries.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "GaleriesPonthe-tvOS.app"
-            BlueprintName = "GaleriesPonthe-tvOS"
-            ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+            BuildableName = "Galeries-tvOS.app"
+            BlueprintName = "Galeries-tvOS"
+            ReferencedContainer = "container:Galeries.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "GaleriesPonthe-tvOS.app"
-            BlueprintName = "GaleriesPonthe-tvOS"
-            ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+            BuildableName = "Galeries-tvOS.app"
+            BlueprintName = "Galeries-tvOS"
+            ReferencedContainer = "container:Galeries.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "GaleriesPonthe-tvOS.app"
-            BlueprintName = "GaleriesPonthe-tvOS"
-            ReferencedContainer = "container:GaleriesPonthe.xcodeproj">
+            BuildableName = "Galeries-tvOS.app"
+            BlueprintName = "Galeries-tvOS"
+            ReferencedContainer = "container:Galeries.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
