--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Galeries-Ponthe",
+  "name": "Galeries Ponthé",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,22 +8,17 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.4.1",
-    "react-native": "0.56.1",
-    "react-native-camera": "^1.0.1",
+    "react": "16.5.0",
+    "react-native": "0.57.1",
     "react-native-elements": "^0.19.1",
-    "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-picker": "^0.26.7",
-    "react-native-vector-icons": "^4.6.0",
-    "react-native-video": "^2.0.0",
-    "react-navigation": "^2.13.0"
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.16.0"
   },
   "devDependencies": {
-    "babel-jest": "22.4.1",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1",
-    "babel-core": "^7.0.0-beta.47"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.45.6",
+    "react-test-renderer": "16.5.0"
   },
   "jest": {
     "preset": "react-native"
