--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -12,3 +12,4 @@ COPY ./ponthe.prod.cfg /app/instance/ponthe.cfg
 RUN mkdir -p /app/instance/club_folder/uploads && mkdir -p /app/instance/club_folder/waiting_zone && mkdir -p /app/instance/club_folder/apk && mkdir -p /app/instance/upload_tmp && mkdir -p /app/instance/logs
 
 RUN pip install /app
+RUN pip install git+git://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
