--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -7,7 +7,7 @@ ARG SSH_PASSWORD
 RUN apt-get update && apt-get install -y openssh-server
 RUN mkdir /var/run/sshd
 
-RUN useradd -ms /bin/bash ponthe
+RUN useradd -ms /bin/bash ${SSH_USERNAME}
 RUN echo "${SSH_USERNAME}:${SSH_PASSWORD}" | chpasswd
 RUN mkdir /home/ponthe/uploads/ /home/ponthe/waiting_zone/
 RUN chown -R ponthe:ponthe /home/ponthe
