--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,15 @@
 # Template file, rename it .env for it to take effects
+
+# Database
 DATABASE_NAME=my-db
 DATABASE_USER=me
 DATABASE_PASSWORD=*****************
 DATABASE_ROOT_PASSWORD=****************************************
+
+# SSH Server
 SSH_USERNAME=yolo
 SSH_PASSWORD=****************
+
+# Flask app
+SECRET_KEY=d66HREGTHUVGDRfdt4
+MAIL_PASSWORD=*
