--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - run: apk --no-cache add py-pip && pip install 'docker-compose==1.18.0'
       - checkout
       - run: cp .env.dist .env
+      - run: sed -i s/secretSSHPassword/${BUILD_SSH_PASSWORD}/g .env
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD quay.io
       - run: |
           export TAG=${CIRCLE_BRANCH}
