--- a/.env.dist
+++ b/.env.dist
@@ -3,13 +3,13 @@
 # Database
 DATABASE_NAME=my-db
 DATABASE_USER=me
-DATABASE_PASSWORD=*****************
-DATABASE_ROOT_PASSWORD=****************************************
+DATABASE_PASSWORD=password
+DATABASE_ROOT_PASSWORD=rootPassword
 
 # SSH Server
-SSH_USERNAME=yolo
-SSH_PASSWORD=****************
+SSH_USERNAME=ponthe
+SSH_PASSWORD=secretSSHPassword
 
 # Flask app
 SECRET_KEY=d66HREGTHUVGDRfdt4
-MAIL_PASSWORD=*
+MAIL_PASSWORD=ImNotSoSecretSoChangeMe
