--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y redis-server openssl
 RUN git clone https://github.com/vishnubob/wait-for-it.git /wait-for-it
 
 COPY ./app /app
-RUN mkdir -p /app/instance/club_folder/uploads && mkdir -p /app/instance/club_folder/waiting_zone && mkdir -p /app/instance/club_folder/apk && mkdir -p /app/instance/upload_tmp && mkdir -p /app/instance/logs
+RUN mkdir -p /app/instance/club_folder/uploads && mkdir -p /app/instance/club_folder/waiting_zone && mkdir -p /app/instance/club_folder/apk && mkdir -p /app/instance/upload_tmp && mkdir -p /app/instance/logs && mkdir -p /app/instance/keys
 
 RUN pip install /app
 RUN pip install git+git://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
