--- a/.env.dist
+++ b/.env.dist
@@ -13,3 +13,4 @@ SSH_PASSWORD=secretSSHPassword
 # Flask app
 SECRET_KEY=d66HREGTHUVGDRfdt4
 MAIL_PASSWORD=ImNotSoSecretSoChangeMe
+WEBHOOK_URL='https://hooks.slack.com/services/TABUN0UVA/BCTUTHWGZ/<token>'
