--- a/web/app/requirements.txt
+++ b/web/app/requirements.txt
@@ -13,3 +13,5 @@ translitcodec # to slugify foreign letters like ü in ue
 slack-logger
 Flask-JWT-extended[asymmetric_crypto]
 click
+Flask-Thumbnails
+Pillow
