--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
 
   db:
     env_file: .env
-    image: mysql
+    image: mysql:8.0
     command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
     volumes:
       - db-data:/var/lib/mysql
