--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -9,7 +9,7 @@ RUN mkdir /var/run/sshd
 
 RUN useradd -ms /bin/bash ${SSH_USERNAME}
 RUN echo "${SSH_USERNAME}:${SSH_PASSWORD}" | chpasswd
-RUN mkdir /home/ponthe/uploads/ /home/ponthe/waiting_zone/
+RUN mkdir /home/ponthe/waiting_zone/
 RUN chown -R ponthe:ponthe /home/ponthe
 
 RUN sed -ri 's/^PermitRootLogin\s+.*/PermitRootLogin no/' /etc/ssh/sshd_config
