--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -9,8 +9,8 @@ RUN mkdir /var/run/sshd
 
 RUN useradd -ms /bin/bash ${SSH_USERNAME}
 RUN echo "${SSH_USERNAME}:${SSH_PASSWORD}" | chpasswd
-RUN mkdir /home/ponthe/waiting_zone/
-RUN chown -R ponthe:ponthe /home/ponthe
+RUN mkdir /home/${SSH_USERNAME}/waiting_zone/
+RUN chown -R ${SSH_USERNAME}:${SSH_USERNAME} /home/${SSH_USERNAME}
 
 RUN sed -ri 's/^PermitRootLogin\s+.*/PermitRootLogin no/' /etc/ssh/sshd_config
 
