--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,12 @@
 # Template file, rename it .env for it to take effects
 
+TAG=master
+
+# Ports
+WEB_PORT=7000
+PHPMYADMIN_PORT=7500
+SSHD_PORT=7502
+
 # Database
 DATABASE_NAME=my-db
 DATABASE_USER=me
