--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: quay.io/enpcponthe/galeries-web:${TAG}
     build: ./web
     ports:
-      - "127.0.0.1:7000:80"
+      - "127.0.0.1:${WEB_PORT}:80"
     volumes:
       - club-folder:/app/instance/club_folder
       - ./web/db_backup:/db_backup
@@ -30,7 +30,7 @@ services:
         - SSH_USERNAME
         - SSH_PASSWORD
     ports:
-      - "7502:22"
+      - "${SSHD_PORT}:22"
     volumes:
       - club-folder:/home/ponthe
     restart: always
@@ -67,7 +67,7 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - "7500:80"
+      - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - db
     restart: always
