--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./web/db_backup:/db_backup
       - ./web/app/instance/thumbs:/app/instance/thumbs
       - ./web/app/instance/uploads:/app/instance/uploads
+      - ./web/app/ponthe/api:/app/ponthe/api
     depends_on:
       - db
       - sshd
