move sshd container configuration to docker-entrypoint.sh, production db drop safegard, event creation page fix, move github pip dependency to setyp,py, put relevant mkdirs in prestart.sh, add VOLUME in DOckerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
+      - TAG=${TAG}
     restart: always
 
   sshd:
@@ -26,9 +27,9 @@ services:
     env_file: .env
     build:
       context: ./sshd
-      args:
-        - SSH_USERNAME
-        - SSH_PASSWORD
+      environment:
+        - SSH_USERNAME=${SSH_USERNAME}
+        - SSH_PASSWORD=${SSH_PASSWORD}
     ports:
       - "${SSHD_PORT}:22"
     volumes:
