--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -1,18 +1,12 @@
 FROM ubuntu:16.04
 MAINTAINER Philippe Ferreira De Sousa
 
-ARG SSH_USERNAME
-ARG SSH_PASSWORD
-
 RUN apt-get update && apt-get install -y openssh-server
 RUN mkdir /var/run/sshd
-
-RUN useradd -ms /bin/bash ${SSH_USERNAME}
-RUN echo "${SSH_USERNAME}:${SSH_PASSWORD}" | chpasswd
-RUN mkdir /home/${SSH_USERNAME}/waiting_zone/
-RUN chown -R ${SSH_USERNAME}:${SSH_USERNAME} /home/${SSH_USERNAME}
-
 RUN sed -ri 's/^PermitRootLogin\s+.*/PermitRootLogin no/' /etc/ssh/sshd_config
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 22
 
