--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,17 @@ services:
     ports:
       - "127.0.0.1:7000:80"
     volumes:
-      - club-folder:/app/instance/club_folder
+      - ./web/app/instance/club-folder:/app/instance/club_folder
       - ./web/db_backup:/db_backup
       - ./web/app/instance/thumbs:/app/instance/thumbs
       - ./web/app/instance/uploads:/app/instance/uploads
-      - ./web/app/ponthe/api:/app/ponthe/api
+      - ./web/app/ponthe:/app/ponthe
     depends_on:
       - db
       - sshd
     environment:
       - SECRET_KEY=${SECRET_KEY}
+      - LOG_PATH=${LOG_PATH}
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
