--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3.1"
 
 services:
   web:
-    image: quay.io/enpcponthe/galeries-web:${TAG}
+    image: quay.io/enpcponthe/galeries-web:${TAG-latest}
     build: ./web
     ports:
       - "127.0.0.1:${WEB_PORT}:80"
     volumes:
-      - club-folder:/app/instance/club_folder
-      - ./web/db_backup:/db_backup
+      - ./web/app/instance/keys:/app/instance/keys
       - ./web/app/instance/thumbs:/app/instance/thumbs
       - ./web/app/instance/uploads:/app/instance/uploads
+      - ./web/app/instance/logs:/app/instance/logs
     depends_on:
       - db
-      - sshd
     environment:
       - SECRET_KEY=${SECRET_KEY}
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
@@ -22,21 +21,7 @@ services:
       - TAG=${TAG}
     restart: always
 
-  sshd:
-    image: quay.io/enpcponthe/galeries-sshd:${TAG}
-    env_file: .env
-    build: ./sshd
-    ports:
-      - "${SSHD_PORT}:22"
-    volumes:
-      - club-folder:/home/ponthe
-    environment:
-      - SSH_USERNAME=${SSH_USERNAME}
-      - SSH_PASSWORD=${SSH_PASSWORD}
-    restart: always
-
   backup:
-    env_file: .env
     image: candyline/mysql-backup-cron
     volumes:
       - ./db-backup:/backup
@@ -51,7 +36,6 @@ services:
     restart: always
 
   db:
-    env_file: .env
     image: mysql:8.0
     command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
     volumes:
@@ -74,6 +58,4 @@ services:
 
 volumes:
   db-data:
-    driver: local
-  club-folder:
     driver: local
