--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,13 +37,11 @@ jobs:
     steps:
       - setup_remote_docker:
             docker_layer_caching: true
-      - run: apk --no-cache add py-pip && pip install 'docker-compose==1.18.0'
       - checkout
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD quay.io
       - run: |
-          export TAG=${CIRCLE_BRANCH}
-          docker build -t quay.io/enpcponthe/galeries-web:${TAG} ./web
-          docker push quay.io/enpcponthe/galeries-web:${TAG}
+          docker build -t quay.io/enpcponthe/galeries-web:${CIRCLE_BRANCH} ./web
+          docker push quay.io/enpcponthe/galeries-web:${CIRCLE_BRANCH}
 
 workflows:
   version: 2
