--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,9 @@ jobs:
       - checkout
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "web/app/dev.requirements.txt" }}
-      - run: mkdir web/app/instance/keys/ && mkdir web/app/instance/club_folder/ && mkdir web/app/instance/club_folder/logs/
-      - run: cd web/app/instance/keys/ && openssl genrsa -out jwtRS256-private.pem 2048 && openssl rsa -in jwtRS256-private.pem -pubout -out jwtRS256-public.pem
+      - run: cd web/app/instance/shared/keys/ && openssl genrsa -out jwtRS256-private.pem 2048 && openssl rsa -in jwtRS256-private.pem -pubout -out jwtRS256-public.pem
       - run: cd web/app && sudo pip install -r dev.requirements.txt
-      - run: py.test --cov-report term --cov=ponthe web/app/ponthe/tests/
+      - run: py.test --cov-report term --cov=ponthe web/app/test/
       - store_artifacts:
           path: test-reports/
           destination: tr1
