--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,10 @@ web/venv/
 .env
 
 # Instance Folder - used for configuration parameters and to serve static files
+web/app/instance/logs/ponthe.log*
+web/app/instance/keys/jwtRS256*
+web/app/instance/static
 web/app/instance/tmp
-web/app/instance/keys
-web/app/instance/thumbs
-web/app/instance/uploads
-web/app/instance/logs
 
 # Coverqge
 web/app/.coverage
