--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ services:
     ports:
       - "127.0.0.1:${WEB_PORT}:80"
     volumes:
-      - ./web/app/instance/keys:/app/instance/keys
-      - ./web/app/instance/thumbs:/app/instance/thumbs
-      - ./web/app/instance/uploads:/app/instance/uploads
-      - ./web/app/instance/logs:/app/instance/logs
+      - ./volumes/static:/app/instance/static
+      - ./volumes/keys:/app/instance/keys
+      - ./volumes/logs:/app/instance/logs
     depends_on:
       - db
     environment:
@@ -18,12 +17,12 @@ services:
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
       - TAG=${TAG}
-    restart: always
+    restart: on-failure
 
   backup:
     image: candyline/mysql-backup-cron
     volumes:
-      - ./db-backup:/backup
+      - ./volumes/db-backup:/backup
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
       - MYSQL_HOST=db
@@ -32,11 +31,11 @@ services:
       - CRON_D_BACKUP="0 1 * * * root /backup.sh | logger"
     depends_on:
       - db
-    restart: always
+    restart: on-failure
 
   db:
     image: mysql:8.0
-    command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
+    command: mysqld --default-authentication-plugin=mysql_native_password
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -45,7 +44,7 @@ services:
       - MYSQL_DATABASE=${DATABASE_NAME}
       - MYSQL_USER=${DATABASE_USER}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
-    restart: always
+    restart: on-failure
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -53,7 +52,7 @@ services:
       - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - db
-    restart: always
+    restart: on-failure
 
 volumes:
   db-data:
