--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "web/app/dev.requirements.txt" }}
-      - run: cd web/app/instance/shared/keys/ && openssl genrsa -out jwtRS256-private.pem 2048 && openssl rsa -in jwtRS256-private.pem -pubout -out jwtRS256-public.pem
+      - run: cd web/app/instance/keys/ && openssl genrsa -out jwtRS256-private.pem 2048 && openssl rsa -in jwtRS256-private.pem -pubout -out jwtRS256-public.pem
       - run: cd web/app && sudo pip install -r dev.requirements.txt
       - run: py.test --cov-report term --cov=ponthe web/app/test/
       - store_artifacts:
