--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,16 @@ workflows:
   version: 2
   main:
     jobs:
-      - lint
-      - test
+      - lint:
+          filters:
+            branches:
+              ignore:
+                - flask_restplus
+      - test:
+          filters:
+            branches:
+              ignore:
+                - flask_restplus
       - build:
           requires:
             - test
@@ -60,3 +68,6 @@ workflows:
             branches:
               only:
                 - master
+                - testing
+              ignore:
+                - flask_restplus
