--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.57.1",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.1.1",
+    "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.16.0"
   },
