--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.1.1",
     "react-native-image-picker": "^0.27.2",
-    "react-native-interactive-image-gallery": "^0.1.2",
+    "react-native-interactive-image-gallery": "github:ENPC-Ponthe/react-native-interactive-image-gallery",
     "react-native-tus-client": "^1.0.3",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.16.0"
