--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - ./web/app/instance/club-folder:/app/instance/club_folder
       - ./web/db_backup:/db_backup
       - ./web/app/instance/thumbs:/app/instance/thumbs
-      - ./web/app/instance/uploads:/app/instance/uploads
+      # - ./web/app/instance/uploads:/app/instance/uploads
+      - ./web/app/ponthe/data/galleries:/app/instance/uploads
       - ./web/app/ponthe:/app/ponthe
     depends_on:
       - db
