--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ web/app/instance/club_folder
 web/app/instance/upload_tmp
 web/app/instance/thumbs
 web/app/instance/uploads
+web/app/ponthe/data/
 web/app/ponthe/config.py
 
 # Coverqge
