delete docker pwd on host after deploy in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ jobs:
             docker-compose exec backup /backup.sh
             docker-compose pull
             docker-compose up -d
+            rm ~/.docker/config.json
             EOF
 
 workflows:
