SSO login through DSI CAS (#6)
account creation and login with cas.enpc.fr

--- a/web/app/instance/ponthe.cfg
+++ b/web/app/instance/ponthe.cfg
@@ -11,3 +11,6 @@ MAIL_USE_TLS = True
 
 JWT_ALGORITHM = 'RS256'
 JWT_ACCESS_TOKEN_EXPIRES = False
+
+CAS_SERVER = 'https://cas.enpc.fr'
+CAS_AFTER_LOGIN = 'public.cas'
