--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -10,9 +10,10 @@ RUN git clone https://github.com/vishnubob/wait-for-it.git /wait-for-it
 ADD ./app/ /app/
 
 RUN mkdir -p /app/instance/uploads && mkdir -p /app/instance/club_folder/waiting_zone && mkdir -p /app/instance/club_folder/apk && mkdir -p /app/instance/thumbs && mkdir -p /app/instance/club_folder/logs && mkdir -p /app/instance/upload_tmp && mkdir -p /app/instance/keys
-
+RUN easy_install Werkzeug Werkzeug
 RUN pip install /app
 RUN pip install --upgrade pip
 RUN pip install flask-restplus
+
 
 RUN pip install git+https://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
