--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ web/venv/
 # Credentials : Mysql / Email
 web/ponthe.prod.cfg
 .env
+.env.dist
 
 # Instance Folder - used for configuration parameters and uploads / fixtures files
 web/app/instance/club_folder
