--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 **/__pycache__/
 **/*.pyc
-docker-compose.yml
-install.sh
-deploy.sh
-*/Dockerfile
-*/logging_config.py
+
 
 # Virtual environment
 web/venv/
@@ -18,6 +14,7 @@ web/ponthe.prod.cfg
 web/app/instance/club_folder
 web/app/instance/upload_tmp
 web/app/instance/thumbs
+web/app/instance/club_folder
 web/app/instance/uploads
 web/app/ponthe/data/
 web/app/ponthe/config.py
