--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.1"
 
 services:
   web:
-    image: quay.io/enpcponthe/galeries-web:${TAG-latest}
+    image: quay.io/philippeferreiradesousa/ponthe-web:${TAG:-latest}
+    build: ./web
     ports:
       - "127.0.0.1:${WEB_PORT}:80"
     volumes:
@@ -20,13 +21,27 @@ services:
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
-      - TAG=${TAG}
-    restart: on-failure
+    restart: always
+
+  sshd:
+    # image: quay.io/philippeferreiradesousa/ponthe-sshd:${TAG:-latest}
+    env_file: .env
+    build:
+      context: ./sshd
+      args:
+        - SSH_USERNAME
+        - SSH_PASSWORD
+    ports:
+      - "7502:22"
+    volumes:
+      - club-folder:/home/ponthe
+    restart: always
 
   backup:
+    env_file: .env
     image: candyline/mysql-backup-cron
     volumes:
-      - ./volumes/db-backup:/backup
+      - ./db-backup:/backup
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
       - MYSQL_HOST=db
@@ -35,11 +50,12 @@ services:
       - CRON_D_BACKUP="0 1 * * * root /backup.sh | logger"
     depends_on:
       - db
-    restart: on-failure
+    restart: always
 
   db:
+    env_file: .env
     image: mysql:8.0
-    command: mysqld --default-authentication-plugin=mysql_native_password
+    command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -48,7 +64,7 @@ services:
       - MYSQL_DATABASE=${DATABASE_NAME}
       - MYSQL_USER=${DATABASE_USER}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
-    restart: on-failure
+    restart: always
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -56,8 +72,10 @@ services:
       - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - db
-    restart: on-failure
+    restart: always
 
 volumes:
   db-data:
+    driver: local
+  club-folder:
     driver: local
