return to previous version 6eb37117e42430f6b0a87693ac84596e5056668c

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,16 +62,8 @@ workflows:
   version: 2
   main:
     jobs:
-      - lint:
-          filters:
-            branches:
-              ignore:
-                - flask_restplus
-      - test:
-          filters:
-            branches:
-              ignore:
-                - flask_restplus
+      - lint
+      - test
       - build:
           requires:
             - test
