--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -7,13 +7,11 @@ ENV PROD_MODE=true
 RUN apt-key update && apt-get update && apt-get install -y redis-server openssl
 RUN git clone https://github.com/vishnubob/wait-for-it.git /wait-for-it
 
-ADD ./app/ /app/
+COPY ./app /app
 
-RUN mkdir -p /app/instance/uploads && mkdir -p /app/instance/club_folder/waiting_zone && mkdir -p /app/instance/club_folder/apk && mkdir -p /app/instance/thumbs && mkdir -p /app/instance/club_folder/logs && mkdir -p /app/instance/upload_tmp && mkdir -p /app/instance/keys
-RUN easy_install Werkzeug
+RUN mkdir -p /app/instance/static
+RUN mkdir -p /app/instance/tmp/uploads
+
 RUN pip install /app
-RUN pip install --upgrade pip
-RUN pip install flask-restplus
 
-
-RUN pip install git+https://github.com/PhilippeFerreiraDeSousa/Flask-Tus.git#egg=Flask-Tus-Ponthe
+VOLUME /app/instance/static
