--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ web/venv/
 # Credentials : Mysql / Email
 web/ponthe.prod.cfg
 .env
+.env.dist
 
 # Instance Folder - used for configuration parameters and uploads / fixtures files
 web/app/instance/club_folder
@@ -20,6 +21,8 @@ web/app/instance/thumbs
 web/app/instance/uploads
 web/app/ponthe/data/
 web/app/ponthe/config.py
+
+
 
 # Coverqge
 web/app/.coverage
