Update nginx config for http timeout #7

--- a/web/app/nginx.conf
+++ b/web/app/nginx.conf
@@ -28,6 +28,8 @@ http {
             try_files $uri @app;
         }
         location @app {
+            uwsgi_read_timeout 600s;
+            uwsgi_send_timeout 600s;
             include uwsgi_params;
             uwsgi_pass unix:///tmp/uwsgi.sock;
         }
